# UIDAI

./: .gitattributes  .gitignore  README.md  docker-compose.yml  presentation.html  pyproject.toml  requirements-ml.txt  requirements.txt  run.sh
.github/workflows/: analysis.yml  deploy.yml
Analysis/: aadhaar_societal_trends_analysis (copy).ipynb  aadhaar_societal_trends_analysis.ipynb
analysis/: analyze.ipynb  run_complete_pipeline.py
analysis/advanced_results/: advanced_analysis_results.json  statistical_inference_report.md
analysis/codes/: __init__.py  aadhaar_societal_trends_analysis.ipynb  advanced_statistical_analysis.py  check_corrections.py  check_duplicates.py  compile_frontend_data.py  complete_api_integration.py  comprehensive_analysis.py  comprehensive_inference_analysis.py  config.py  create_samples.py  csv_cleaner.py  data_augmentation.py  data_augmentation_optimized.py  data_augmenter.py  detailed_validation.py  full_pipeline.py  generate_large_figures.py  generate_paper_figures.py  generate_visualizations.py  india_reference_data.py  logger.py  run_all_analyses.py  test_apis.py  test_json.py  verify_augmentation.py
analysis/codes/api_clients/: __init__.py  base.py  census.py  geographic.py  pincode.py  weather.py
analysis/codes/demographic/: __init__.py  analyzer.py
analysis/codes/geographic/: __init__.py  analyzer.py
analysis/codes/ml_models/: __init__.py  complete_training.py  comprehensive_training.py  inference.py  training.py
analysis/codes/statistical/: __init__.py  analyzer.py
analysis/codes/time_series/: __init__.py  analyzer.py
analysis/codes/utils/: __init__.py  io_utils.py  parallel.py  progress.py  validators.py
analysis/codes/visualization/: __init__.py  generate_all_pdfs.py  visualizer.py
analysis/outputs/results/: comprehensive_analysis_results.json  statistical_inferences.md
docker/: Dockerfile  Dockerfile.ml
docs/: ANALYSIS_MASTER_PLAN.md  API_INTEGRATION_CATALOG.md  API_REFERENCE.md  AUGMENTATION_SUMMARY.md  COMPLETE_PROJECT_REPORT.md  DATA_CORRECTION_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  VIEWING_LARGE_FILES.md
paper/: README.md  final_research_paper.tex  main.tex  references.bib  research_paper.aux  research_paper.md  research_paper.out  research_paper.tex  research_paper_old.tex  rewritten_research_paper.tex
paper/figures_large/: figures_metadata.json
results/: analysis_summary.json
results/analysis/demographic/: biometric_age_groups.json  biometric_age_trends.json  biometric_literacy.json  biometric_population.json  biometric_sex_ratio.json  demographic_age_groups.json  demographic_age_trends.json  demographic_literacy.json  demographic_population.json  demographic_sex_ratio.json  enrollment_age_groups.json  (+4 more)
results/comprehensive_analysis/: comprehensive_analysis_results.json
web/backend/: README.md  app.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+81 files in other folders)
