[project]
name = "uidai-hackathon"
version = "2.0.0"
description = "Aadhaar Dataset Analysis, Cleaning, and Augmentation Pipeline - Production Grade"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "UIDAI Hackathon Team" }
]
keywords = ["aadhaar", "data-augmentation", "india", "census", "weather-api", "data-cleaning"]

dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",  # For efficient CSV/Parquet handling
    
    # HTTP & API clients
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "httpx>=0.25.0",  # Modern async HTTP client
    
    # Retry & resilience
    "tenacity>=8.2.0",
    "backoff>=2.2.0",
    
    # Progress & logging
    "tqdm>=4.65.0",
    "rich>=13.0.0",  # Rich console output
    
    # File handling
    "chardet>=5.0.0",
    "python-dateutil>=2.8.0",
    
    # Web scraping (for API docs research)
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Data validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

all = [
    "uidai-hackathon[dev,notebook]",
]

[project.scripts]
uidai-clean = "analysis.codes.csv_cleaner:main"
uidai-augment = "analysis.codes.data_augmenter:main"
uidai-validate = "analysis.codes.csv_cleaner:main"

[project.urls]
Repository = "https://github.com/uidai-hackathon/aadhaar-data-pipeline"
Documentation = "https://github.com/uidai-hackathon/aadhaar-data-pipeline#readme"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["analysis"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["analysis"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
